# octavia-proxy

./: .dockerignore  .gitignore  .stestr.blacklist.functional  .stestr.conf  .zuul.yaml  CODEOWNERS  Dockerfile  README.rst  bindep.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api-ref/source/: conf.py  index.rst
api-ref/source/v2/: availabilityzone.inc  flavor.inc  index.rst
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: contributing.rst  index.rst
doc/source/reference/: hld.rst  index.rst
doc/source/user/: index.rst
doc/source/user/feature-classification/: feature-matrix-healthmonitor.ini  feature-matrix-l7policy.ini  feature-matrix-l7rule.ini  feature-matrix-lb.ini  feature-matrix-listener.ini  feature-matrix-member.ini  feature-matrix-pool.ini  index.rst
etc/: octavia.conf  octavia_proxy.conf  policy.yaml
octavia_proxy/: i18n.py  opts.py  version.py
octavia_proxy/api/: app.py  config.py  root_controller.py
octavia_proxy/api/common/: hooks.py  invocation.py  pagination.py  types.py
octavia_proxy/api/drivers/: driver_factory.py  utils.py
octavia_proxy/api/drivers/elbv2/: driver.py
octavia_proxy/api/drivers/elbv3/: driver.py
octavia_proxy/api/v2/controllers/: __init__.py  availability_zones.py  base.py  flavors.py  health_monitor.py  l7policy.py  l7rule.py  listener.py  load_balancer.py  (+4 more)
octavia_proxy/cmd/: api.py
octavia_proxy/common/: config.py  constants.py  context.py  exceptions.py  policy.py  service.py  utils.py  validate.py
octavia_proxy/policies/: __init__.py  availability_zone.py  base.py  flavor.py  healthmonitor.py  l7policy.py  l7rule.py  listener.py  loadbalancer.py  member.py  pool.py  provider.py  provider_availability_zone.py  provider_flavor.py  quota.py
octavia_proxy/tests/functional/: base.py
octavia_proxy/tests/unit/: base.py  test_invocation.py  test_version.py
releasenotes/notes/: add-docs-ba2ea3a4988f8e8e.yaml  add-func-tests-3c166f118aa68555.yaml  add-rn-1.0-7d79ecd15177368e.yaml  duplicated-entries-aef34a506dd371b5.yaml  elbv3-de-fix-lb-creation-fb236f71186cb2ba.yaml  endpoint-override-b3a2b69c7baff0f1.yaml  init-e95fc214a3192ac4.yaml  pagination-be6aee02e6a50513.yaml  query-fix-b3f85b7c6dcd565b.yaml  tz-fix-0660071bcfd16771.yaml
releasenotes/source/: conf.py  index.rst
(+54 files in other folders)
