[metadata]
name = octavia-proxy
summary = Open Telekom Cloud Octavia API proxy
description_file =
    README.rst
author = Open Telekom Cloud
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    OpenStack, openstackclient, openstacksdk, Open Telekom Cloud, otc, T-Systems, Telekom

[files]
packages =
  octavia_proxy

[entry_points]
octavia_proxy.api.drivers =
  elbv2 = octavia_proxy.api.drivers.elbv2.driver:ELBv2Driver
  elbv3 = octavia_proxy.api.drivers.elbv3.driver:ELBv3Driver

oslo.policy.policies =
    octavia = octavia.policies:list_rules
oslo.policy.enforcer =
    octavia = octavia.common.policy:get_no_context_enforcer
